# pkr_units

./: $filePath  .buildnotes.md  .clang-format  .clang-tidy  .copilot-instructions.md  .gitignore  AI_USE_LICENCE.md  CHANGELOG.md  CMakeLists.txt  CMakeUserPresets.json  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  DESIGN.md  LIBRARY_COMPARISON.md  PACKAGE_REVIEW.md  README.md  SECURITY.md  TODO.md  agents.md  build_output.txt  build_output_full.txt  build_output_msvc.txt  build_phase2b_result.txt  build_venv.yml  compiler_settings.cmake  conanfile.py  coverage_output.txt  fix_all_includes.py  fix_derived_units.py  fix_namespaces.py  output.txt  robots.txt  squash_history.ps1  update_namespaces.py
examples/: CMakeLists.txt  assembly_comparison.cpp  assembly_optimization_analysis.md  ex_derived_units.cpp  ex_electrical_engineering.cpp  ex_first_example.cpp  ex_kinetic_energy.cpp  ex_literals.cpp  ex_measurement_parsing.cpp  ex_physics_functions.cpp  ex_temperature.cpp  ex_type_safety.cpp  ex_unit_conversion.cpp  ex_unit_series.cpp  ex_vector_formatting.cpp  main.cpp  matrix_storage_policies_example.cpp
tests/: CMakeLists.txt  main.cpp  test_arithmetic_optimizations.cpp  test_constants.cpp  test_constants_comprehensive.cpp  test_dimensional_analysis.cpp  test_dimensional_safety.cpp  test_formatting.cpp  test_json.cpp  test_si_amount.cpp  test_si_current.cpp  test_si_intensity.cpp  test_si_length.cpp  test_si_length_astronomical.cpp  test_si_length_cast.cpp  test_si_length_formatting.cpp  test_si_length_imperial.cpp  test_si_length_non_si_units.cpp  test_si_mass.cpp  test_si_multi_cast.cpp  test_si_temperature.cpp  test_si_time.cpp  test_si_velocity.cpp  test_velocity_formatting.cpp
tests/acceleration/: test_acceleration.cpp  test_acceleration_cast.cpp  test_acceleration_formatting.cpp  test_acceleration_operators.cpp
tests/amount/: test_si_amount.cpp  test_si_amount_formatting.cpp  test_si_amount_operators.cpp
tests/angle/: test_si_angle.cpp  test_si_angle_formatting.cpp
tests/area/: test_area_operations.cpp  test_si_area_formatting.cpp
tests/arithmetic/: test_arithmetic_optimizations.cpp
tests/astronomical/: test_astronomical_angle_formatting.cpp
tests/casting/: test_multi_unit_cast.cpp
tests/cgs/: test_cgs_units.cpp
tests/compile_fail/: cf_bit_byte_mismatch.cpp  cf_byte_plus_mole.cpp  cf_meter_ctor.cpp  cf_operator_minus.cpp  cf_operator_plus.cpp  cf_sin.cpp  cf_sqrt.cpp  cf_tagged_amounts.cpp  cf_unit_t_ctor.cpp
tests/computer_science/: test_bits_bytes.cpp  test_flops.cpp  test_neural_ops.cpp  test_rates.cpp
tests/concentration/: test_concentration.cpp  test_concentration_cast.cpp  test_concentration_formatting.cpp  test_concentration_operators.cpp
tests/current/: test_si_current.cpp  test_si_current_formatting.cpp  test_si_current_operators.cpp
tests/dimensionless/: test_dimensionless_cast.cpp  test_dimensionless_formatting.cpp
tests/electrical/: test_complex_formatting.cpp  test_complex_impedance.cpp  test_si_electrical_formatting.cpp  test_si_resistance_formatting.cpp
tests/energy/: test_energy.cpp  test_energy_cast.cpp  test_energy_formatting.cpp  test_energy_operators.cpp
tests/force/: test_force.cpp  test_force_cast.cpp  test_force_formatting.cpp  test_force_operators.cpp
tests/formatting/: test_measurement_formatting.cpp
tests/general/: test_arithmetic_optimizations.cpp  test_si_multi_cast.cpp
tests/impl/: test_unit_pow.cpp
tests/include/: compile_time_tests.h  google_test.h  stringify.h
tests/integration/: test_edge_cases.cpp  test_photometry_radiometry_dimensional_analysis.cpp  test_three_body_problem.cpp
tests/intensity/: test_si_intensity.cpp  test_si_intensity_formatting.cpp  test_si_intensity_operators.cpp
tests/length/: test_si_length.cpp  test_si_length_astronomical.cpp  test_si_length_cast.cpp  test_si_length_formatting.cpp  test_si_length_imperial.cpp  test_si_length_literals.cpp  test_si_length_non_si_units.cpp  test_si_length_operators.cpp
tests/magnetic/: test_magnetic_flux_density.cpp
tests/mass/: test_si_mass.cpp  test_si_mass_formatting.cpp  test_si_mass_operators.cpp
tests/math/: test_arithmetic_optimizations.cpp  test_math_functions.cpp  test_measurement_math_rss.cpp  test_measurement_rss_math.cpp  test_unit_math.cpp  test_unit_math_arithmetic.cpp  test_unit_math_functions.cpp  test_unit_math_optimizations.cpp  test_vector_4d.cpp  test_vector_4d_measurements_rss.cpp  test_vector_4d_units.cpp  test_vector_generic_3d.cpp  test_vector_generic_4d.cpp  test_vector_measurement_rss_3d.cpp  test_vector_measurement_rss_4d.cpp  test_vector_unit_3d.cpp  test_vector_unit_4d.cpp
tests/measurements/: test_measurement.cpp  test_measurement_edge_cases.cpp  test_measurement_linear.cpp  test_measurement_rss.cpp  test_rk4_calculation_patterns_rss.cpp
tests/multi_cast/: test_multi_unit_cast.cpp
tests/numerical/: rk4_steppers.h  rk4_steppers_double.h  rk4_steppers_measurements.h  rk4_steppers_units.h  test_three_body_problem.cpp  three_body_comparison.h  three_body_helpers.h  vector_math_double.h
tests/parsing/: test_parsing.cpp  test_parsing_measurement.cpp
tests/photometry/: test_illuminance.cpp  test_luminous_flux.cpp  test_photometry.cpp
tests/power/: test_imperial_power_formatting.cpp  test_si_power_formatting.cpp
tests/pressure/: test_imperial_pressure_formatting.cpp  test_si_pressure_formatting.cpp
tests/radiometry/: test_radiometry.cpp  test_radiometry_units.cpp
tests/solid_angle/: test_solid_angle.cpp  test_steradian.cpp
tests/storage/: test_matrix_storage_policies.cpp
tests/storage_policies/: test_matrix_storage_policies.cpp
tests/temperature/: test_si_temperature.cpp  test_si_temperature_formatting.cpp  test_si_temperature_operators.cpp  test_temperature_affine.cpp  test_temperature_cast.cpp
tests/thermal/: test_specific_heat_capacity.cpp  test_thermal_conductivity.cpp
tests/time/: test_chrono_cast.cpp  test_si_time.cpp  test_si_time_formatting.cpp  test_si_time_operators.cpp
tests/tools/: _all_sdk_headers.h  _all_sdk_tu.cpp
tests/units/: test_spaceship_operator.cpp
(+713 files in other folders)
